# screenOCR

./: AppRun  HOTKEY-SETUP.md  PACKAGING.md  QUICKSTART.md  README.md  build-appimage-simple.sh  build-appimage.sh  build-onefile.sh  com.github.adikul1023.screenocr.yml  create-release.sh  hotkey_daemon.py  install.sh  main.py  pyproject.toml  requirements.txt  screenocr-daemon.service  setup.cfg  setup.py  setup_environment.py  test_ocr.py
.github/workflows/: release.yml
snap/: snapcraft.yaml
