[metadata]
name = screenocr
version = attr: setuptools_scm.get_version
description = Fast hotkey-triggered OCR for Linux/Wayland
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/adikul1023/screenOCR
author = OCR Developer
author_email = dev@screenocr.local
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Environment :: X11 Applications :: Qt
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Office/Business
    Topic :: Multimedia :: Graphics :: Capture

project_urls =
    Source = https://github.com/adikul1023/screenOCR
    Issues = https://github.com/adikul1023/screenOCR/issues
    Releases = https://github.com/adikul1023/screenOCR/releases

[options]
packages = find:
py_modules =
    main
    ocr_engine
    portal
    overlay
    utils
    hotkey_daemon

install_requires =
    PySide6>=6.8.0
    opencv-python>=4.8.0
    rapidocr-onnxruntime>=1.3.0
    pillow>=10.0.0
    numpy>=1.24.0
    keyboard>=0.13.5

python_requires = >=3.10

[options.entry_points]
console_scripts =
    screenocr = main:cli_main

[options.packages.find]
where = .

[bdist_wheel]
universal = 0

[flake8]
max-line-length = 100
exclude = .git,__pycache__,venv,build,dist
